# bi-ai

./: .gitignore  PLAN.md  README.md  package-lock.json  package.json  test-extension.js  test-sql-flow.js
chartgen/: chartgen-0.1.0.supx  extension.json  manifest.json
chartgen/backend/src/bi_ai/chartgen/: api.py  chart_builder.py  chart_llm.py
chartgen/frontend/: package-lock.json  package.json  webpack.config.js
chartgen/frontend/src/: index.tsx
chartgen/frontend/src/panel/: ChartGenPanel.tsx
dev/: CHARTGEN_PLAN.md  IMPLEMENTATION_PLAN.md  seed_goldlayer.py  setup_goldlayer.sql  setup_superset.py
superset-text2sql-poc/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  superset_config.py
superset-text2sql-poc/app/: config.py  database.py  llm_client.py  metadata.py  metrics_catalog.py  prompt_builder.py  seed_demo_data.py  sql_validator.py  ui.py
superset-text2sql-poc/data/: metrics_catalog.yaml
superset-text2sql-poc/tests/: test_prompt_builder.py  test_sql_validator.py
text2sql/: .gitignore  extension.json
text2sql/backend/: pyproject.toml
text2sql/backend/src/bi_ai/text2sql/: api.py  entrypoint.py  llm.py  metadata.py  prompt_builder.py  sql_validator.py  tenant.py
text2sql/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.standalone.config.js
text2sql/frontend/src/: index.tsx  standalone.tsx
text2sql/frontend/src/panel/: AiPanel.tsx  ChartGenPanel.tsx  Text2SqlPanel.tsx
