[project]
name = "bi_ai-text2sql"
version = "0.1.0"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "apache-superset-core>=0.1.0rc2",
    "openai>=1.0.0",
    "sqlglot>=20.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.apache_superset_extensions.build]
include = [
    "src/bi_ai/text2sql/**/*.py",
]
exclude = []
